sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:15: error: Unmatched closing brace '}' ignored here
}
^